<?xml version="1.0"?>
<package format="3">
  <name>dmvio_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 driver for DM-VIO: Delayed Marginalization Visual-Inertial Odometry</description>

  <maintainer email="lukas.stumberg@tum.de">Lukas von Stumberg</maintainer>
  <license>GPLv3</license>
  <url type="website">https://vision.in.tum.de/dm-vio</url>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage_default_plugins</depend>
  <depend>ament_cmake</depend>
  <depend>std_msgs</depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
